test/GlobalVars/global_vars2.exp
  File "./global_vars2.clx", line 16
    global a="hi"
            ^
SyntaxError: invalid syntax
